--- a/Order Analysis.ipynb
+++ b/Order Analysis.ipynb
@@ -9,6 +9,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0d107409",
+   "metadata": {
+    "vscode": {
+     "languageId": "markdown"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "## Introduction\n",
+    "\n",
+    "##### This project analyzes restaurant order data to uncover insights into sales performance and customer behavior. By examining order details alongside menu information, we aim to identify the best- and worst-selling items, as well as the busiest and slowest periods for the restaurant. The analysis leverages data manipulation and visualization techniques to provide actionable recommendations for optimizing menu offerings and staffing schedules."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "96fd26d2-bbaa-47be-855c-eb588d8d7000",
    "metadata": {},
@@ -1495,9 +1511,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
